3gpi-utils (0.2-1) unstable; urgency=low

  * Add copyright
  * Use dh-systemd

 -- Masahiro Honda <honda@mechatrax.com>  Mon, 17 Nov 2014 12:53:06 +0000

3gpi-utils (0.1-1) unstable; urgency=low

  * Initial release

 -- Masahiro Honda <honda@mechatrax.com>  Thu, 11 Sep 2014 06:08:08 +0000