@@ -1,4 +1,4 @@
 #
 # Regular cron jobs for the 3gpi-utils package
 #
-*/5 *	* * *	root	[ -x /usr/sbin/3gpikeep.sh ] && /usr/sbin/3gpikeep.sh
+*/5 *	* * *	root	. /etc/default/3gpi-utils; [ $AUTO_ON -eq 0 ] || [ $KEEP_ON -eq 0 ] || [ $(/usr/sbin/3gpictl --status) = "on" ] || /usr/sbin/3gpictl --poweron
