@@ -1,9 +1,19 @@
 [Unit]
-Description=Initialize Raspberry Pi GPIO for 3GPI 
+Description=Initialize 3GPI 
 
 [Service]
 Type=oneshot
-ExecStart=/usr/sbin/3gpiinit.sh
+EnvironmentFile=/etc/default/3gpi-utils
+ExecStart=/bin/sh -c 'echo 17 > /sys/class/gpio/export'
+ExecStart=/bin/sh -c 'echo 22 > /sys/class/gpio/export'
+ExecStart=/bin/sh -c 'echo 27 > /sys/class/gpio/export'
+ExecStart=/bin/sleep 1
+ExecStart=/bin/sh -c 'echo "out" > /sys/class/gpio/gpio17/direction'
+ExecStart=/bin/sh -c 'echo "in" > /sys/class/gpio/gpio22/direction'
+ExecStart=/bin/sh -c 'echo "out" > /sys/class/gpio/gpio27/direction'
+ExecStart=/bin/sh -c '[ $AUTO_ON -eq 0 ] || [ $(/usr/sbin/3gpictl --status) = "on" ] || /usr/sbin/3gpictl --poweron'
+ExecStop=/bin/sh -c '[ $(/usr/sbin/3gpictl --status) = "off" ] || /usr/sbin/3gpictl --poweroff'
+RemainAfterExit=yes
 
 [Install]
 WantedBy=multi-user.target
