@@ -2,6 +2,8 @@
 
   * Add copyright
   * Use dh-systemd
+  * Remove 3gpiinit.sh and 3gpikeep.sh
+  * Modify scripts
 
  -- Masahiro Honda <honda@mechatrax.com>  Mon, 17 Nov 2014 12:53:06 +0000
 
